# sysmon

./: .gitignore  CMakeLists.txt  Sysmon.desktop  install.sh  main.cpp  sysmon.cpp  sysmon.h
